--- a/views/games.ejs
+++ b/views/games.ejs
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-md-6 col-lg-5 mb-6">
         <div class="card">
-            <img src="https://images.unsplash.com/photo-1697927979352-8cdb8d20f863?q=80&w=1064&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="Games">
+            <img src="https://images.unsplash.com/photo-1697927979352-8cdb8d20f863?q=80&w=1064&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" height="633" alt="Games">
             <div class="card-body">
                 <h5 class="card-title">Games</h5>
                 <p class="card-text">Snake And Ball Game Play and have fun.</p>
@@ -14,7 +14,7 @@
 
     <div class="col-md-6 col-lg-5 mb-6">
         <div class="card">
-            <img src="https://images.unsplash.com/photo-1527672809634-04ed36500acd?q=80&w=1287&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top"  alt="UI Design">
+            <img src="https://images.unsplash.com/photo-1527672809634-04ed36500acd?q=80&w=1287&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" height="633"  alt="UI Design">
             <div class="card-body">
                 <h5 class="card-title">Games</h5>
                 <p class="card-text">Balling Game with Ball browsing experience.</p>
